Bug 1192243 - Fix Gtk3 crash reporter's ScrolledWindow and width. r=karlt